--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
-<img src="img/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg">
+<img src="img/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="">
+<img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="">
 </body>
 </html>
