--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
         img {
             max-width: 100%;
             vertical-align: top;
+            display: none;
+        }
+
+        img#responsive {
+            max-width: 100%;
+            display: none;
+        }
+
+        @media screen  and (max-width: 768px) {
+            img#responsive {
+                display: block;
+            }
+
         }
     </style>
 </head>
 <body>
-<img src="img/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="">
+<img src="img/header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="" id="responsive">
 <img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="">
 <img src="img/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt="">
 <img src="img/clasica_0663a6aa-2c83-4435-8530-357480d5a950.jpg" alt="">
+<img src="img/invie-responsive_9eaee446-2d8d-4cfb-92e1-c4038311af4a.png" alt="">
 </body>
 </html>
